@@ -19,6 +19,7 @@ class User < ActiveRecord::Base
   scope :status, lambda { |*args|  { conditions: ["users.status IN (?)", args.first] } }
   scope :search, lambda { |*args| { conditions: [ 'LOWER(first_name) LIKE ? or LOWER(last_name) LIKE ? or LOWER(email) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
   scope :system_admins, conditions: { system_admin: true }
+  scope :administrators, conditions: { administrator: true }
 
   # Model Validation
   validates_presence_of :first_name, :last_name
