@@ -234,95 +234,96 @@
     </div>
   </fieldset>
 
-  <fieldset>
-    <legend>Admin Only</legend>
-    <div class="field">
-      <%= f.label :accepted %><br />
-      <%= f.check_box :accepted %>
-    </div>
-    <div class="field">
-      <%= f.label :cv_number, 'CV number' %><br />
-      <%= f.number_field :cv_number %>
-    </div>
+  <% if current_user.administrator? %>
+    <fieldset>
+      <legend>Admin Only</legend>
+      <div class="field">
+        <%= f.label :accepted %><br />
+        <%= f.check_box :accepted %>
+      </div>
+      <div class="field">
+        <%= f.label :cv_number, 'CV number' %><br />
+        <%= f.number_field :cv_number %>
+      </div>
 
-    <div class="field">
-      <%= f.label :enrolled %><br />
-      <%= f.check_box :enrolled %>
-    </div>
+      <div class="field">
+        <%= f.label :enrolled %><br />
+        <%= f.check_box :enrolled %>
+      </div>
 
-    <div class="field">
-      <%= f.label :review_date %><br />
-      <%= f.text_field :review_date, class: 'datepicker', value: @applicant.review_date ? @applicant.review_date.strftime('%m/%d/%Y') : '' %>
-    </div>
-    <div class="field">
-      <%= f.label :reviewed %><br />
-      <%= f.check_box :reviewed %>
-    </div>
+      <div class="field">
+        <%= f.label :review_date %><br />
+        <%= f.text_field :review_date, class: 'datepicker', value: @applicant.review_date ? @applicant.review_date.strftime('%m/%d/%Y') : '' %>
+      </div>
+      <div class="field">
+        <%= f.label :reviewed %><br />
+        <%= f.check_box :reviewed %>
+      </div>
 
-    <div class="field">
-      <%= f.label :offered %><br />
-      <%= f.check_box :offered %>
-    </div>
+      <div class="field">
+        <%= f.label :offered %><br />
+        <%= f.check_box :offered %>
+      </div>
 
-    <div class="field">
-      <%= f.label :degree_type %><br />
-      <%= f.text_field :degree_type %>
-    </div>
+      <div class="field">
+        <%= f.label :degree_type %><br />
+        <%= f.text_field :degree_type %>
+      </div>
 
-    <div class="field">
-      <%= f.label :primary_preceptor_id %><br />
-      <%= f.select :primary_preceptor_id, [['---', nil]] + Preceptor.current.collect{|p| [p.name, p.id]} %>
-    </div>
-    <div class="field">
-      <%= f.label :secondary_preceptor_id %><br />
-      <%= f.select :secondary_preceptor_id, [['---', nil]] + Preceptor.current.collect{|p| [p.name, p.id]} %>
-    </div>
+      <div class="field">
+        <%= f.label :primary_preceptor_id %><br />
+        <%= f.select :primary_preceptor_id, [['---', nil]] + Preceptor.current.collect{|p| [p.name, p.id]} %>
+      </div>
+      <div class="field">
+        <%= f.label :secondary_preceptor_id %><br />
+        <%= f.select :secondary_preceptor_id, [['---', nil]] + Preceptor.current.collect{|p| [p.name, p.id]} %>
+      </div>
 
-    <div class="field">
-      <%= f.label :trainee_code %><br />
-      <%= f.text_field :trainee_code %>
-    </div>
+      <div class="field">
+        <%= f.label :trainee_code %><br />
+        <%= f.text_field :trainee_code %>
+      </div>
 
-    <div class="field">
-      <%= f.label :appointment_type, "Appointment Type (Remove/Merge)" %><br />
-      <%= f.text_field :appointment_type %>
-    </div>
+      <div class="field">
+        <%= f.label :appointment_type, "Appointment Type (Remove/Merge)" %><br />
+        <%= f.text_field :appointment_type %>
+      </div>
 
-    <div class="field">
-      <%= f.label :year_department_program, "Year Department (To Be Hidden)" %><br />
-      <%= f.text_field :year_department_program %>
-    </div>
+      <div class="field">
+        <%= f.label :year_department_program, "Year Department (To Be Hidden)" %><br />
+        <%= f.text_field :year_department_program %>
+      </div>
 
-    <div class="field">
-      <%= f.label :status %><br />
-      <%= f.select :status, Applicant::STATUS %>
-    </div>
+      <div class="field">
+        <%= f.label :status %><br />
+        <%= f.select :status, Applicant::STATUS %>
+      </div>
 
-    <div class="field">
-      <%= f.label :training_grant_years %><br />
-      <%= f.text_field :training_grant_years %>
-    </div>
+      <div class="field">
+        <%= f.label :training_grant_years %><br />
+        <%= f.text_field :training_grant_years %>
+      </div>
 
-    <div class="field">
-      <%= f.label :supported_by_tg, "Supported by TG" %><br />
-      <%= f.check_box :supported_by_tg %>
-    </div>
+      <div class="field">
+        <%= f.label :supported_by_tg, "Supported by TG" %><br />
+        <%= f.check_box :supported_by_tg %>
+      </div>
 
-    <div class="field">
-      <%= f.label :training_period_start_date %><br />
-      <%= f.text_field :training_period_start_date, class: 'datepicker', value: @applicant.training_period_start_date ? @applicant.training_period_start_date.strftime('%m/%d/%Y') : '' %>
-    </div>
-    <div class="field">
-      <%= f.label :training_period_end_date %><br />
-      <%= f.text_field :training_period_end_date, class: 'datepicker', value: @applicant.training_period_end_date ? @applicant.training_period_end_date.strftime('%m/%d/%Y') : '' %>
-    </div>
+      <div class="field">
+        <%= f.label :training_period_start_date %><br />
+        <%= f.text_field :training_period_start_date, class: 'datepicker', value: @applicant.training_period_start_date ? @applicant.training_period_start_date.strftime('%m/%d/%Y') : '' %>
+      </div>
+      <div class="field">
+        <%= f.label :training_period_end_date %><br />
+        <%= f.text_field :training_period_end_date, class: 'datepicker', value: @applicant.training_period_end_date ? @applicant.training_period_end_date.strftime('%m/%d/%Y') : '' %>
+      </div>
 
-    <div class="field">
-      <%= f.label :notes %><br />
-      <%= f.text_area :notes, rows: 7, style: "width:#{width}" %>
-    </div>
-  </fieldset>
-
+      <div class="field">
+        <%= f.label :notes %><br />
+        <%= f.text_area :notes, rows: 7, style: "width:#{width}" %>
+      </div>
+    </fieldset>
+  <% end %>
   <fieldset>
     <legend>Applicant Assurance and Sign Off</legend>
     <ul>
