@@ -35,11 +35,11 @@ Contour.setup do |config|
       links: []
     },
     {
-      name: 'Applicants', display: 'signed_in', path: 'applicants_path', position: 'left',
+      name: 'Applicants', display: 'signed_in', path: 'applicants_path', position: 'left', condition: 'current_user.administrator?',
       links: [{ name: '+ New', path: 'new_applicant_path' }]
     },
     {
-      name: 'Preceptors', display: 'signed_in', path: 'preceptors_path', position: 'left',
+      name: 'Preceptors', display: 'signed_in', path: 'preceptors_path', position: 'left', condition: 'current_user.administrator?',
       links: [{ name: '+ New', path: 'new_preceptor_path' }]
     },
     {
